[package]
name = "hecto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
unicode-segmentation = "1"

[[example]]
name = "two-sum"
path = "examples/two-sum.rs"

[[example]]
name = "test-usize"
path = "examples/test-usize.rs"